--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "vite",
-  "version": "0.0.0",
+  "name": "nuxt-app",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-  },
-  "dependencies": {
-    "vue": "^3.0.2"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.8",
-    "@vue/compiler-sfc": "^3.0.2"
+    "@nuxt/devtools": "latest",
+    "@types/node": "^18",
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.5.2",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
